testsuite/tests/typing-layouts-unboxed-records/unboxed_records_disabled.compilers.reference
File "unboxed_records.ml", line 41, characters 0-34:
41 | type ints = #{ x : int ; y : int }
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This construct requires the stable version of the extension "layouts", which is disabled and cannot be used
